[gd_scene load_steps=6 format=3 uid="uid://u87gi2y70jjc"]

[ext_resource type="Script" uid="uid://c20601lg1v2tn" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="AudioStream" uid="uid://bddbfei8lgl22" path="res://sounds/whossh.mp3" id="2_g2els"]
[ext_resource type="AudioStream" uid="uid://bvtfegyci5ec0" path="res://sounds/powerUp.wav" id="3_qhqgy"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_g2els"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qhqgy"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(-0.998756, 0, 0.0498609, 0, 1, 0, -0.0498609, 0, -0.998756, 0, 0, 0)
script = ExtResource("1_3vyb7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
cast_shadow = 0
mesh = SubResource("CapsuleMesh_g2els")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qhqgy")

[node name="dashbar2" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.211
anchor_top = 1.0
anchor_right = 0.211
anchor_bottom = 1.0
offset_left = 917.88
offset_top = -75.0
offset_right = 995.88
offset_bottom = -9.0

[node name="dashbar3" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.211
anchor_top = 1.0
anchor_right = 0.211
anchor_bottom = 1.0
offset_left = 836.88
offset_top = -75.0
offset_right = 914.88
offset_bottom = -9.0
color = Color(0, 0, 0, 1)

[node name="dashbar1" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.211
anchor_top = 1.0
anchor_right = 0.223
anchor_bottom = 1.0
offset_left = 998.88
offset_top = -75.0
offset_right = 1053.84
offset_bottom = -9.0

[node name="Twistpivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Twistpivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.586181, 0.0440956)

[node name="jump" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_g2els")
bus = &"SFX"

[node name="dash" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(-0.460571, 0, -0.887623, 0, 1, 0, 0.887623, 0, -0.460571, 0, 0, 0)
stream = ExtResource("2_g2els")
pitch_scale = 2.07
bus = &"SFX"

[node name="powerup" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_qhqgy")
volume_db = -15.0
max_distance = 500.0
bus = &"SFX"
